--- a/MvxCommandTest.Core/MvxCommandTest.Core.csproj
+++ b/MvxCommandTest.Core/MvxCommandTest.Core.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Commands\Command.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
   </ItemGroup>
