--- a/MvxCommandTest.Pc/MvxCommandTest.Pc.csproj
+++ b/MvxCommandTest.Pc/MvxCommandTest.Pc.csproj
@@ -76,6 +76,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="App.Xaml.Mvx.cs" />
+    <Compile Include="Commands\WpfCommandHelper.cs" />
     <Compile Include="DebugTrace.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="Views\MainView.xaml.cs">
